# procomex_scraper

./: .gitignore  Dockerfile  MANUAL.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
adapters/: __init__.py  base.py  generico.py  pdf_catalog.py  truper.py  tubin.py  urrea.py
core/: __init__.py  csv_io.py  downloader.py  image_validator.py  parser.py  pdf_extractor.py  rate_limiter.py  resumable.py  session_manager.py
entrada/: example.csv  input.csv
tests/: test_base_adapter.py  test_csv_io.py  test_image_validator.py
