[project]
name = "procomex_scraper"
version = "0.1.0"
description = "Scraper de imágenes de productos ferreteros para Shopify"
authors = [{name = "procomex_scraper", email = "noreply@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "pillow>=10.0",
    "playwright>=1.40",
    "python-dotenv>=1.0"
]

[project.scripts]
procomex-scraper = "main:main"

[tool.black]
line-length = 88

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
